--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
     "angular-route": "1.2.16",
-    "ngstorage": "~0.3.0"
+    "ngstorage": "~0.3.0",
+    "angular-bootstrap": "~0.11.0",
+    "bootstrap": "~3.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
